--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 body {
   background-color: grey;
 }
+
+.cool {
+  display: none;
+  width: 100px;
+  height: 100px;
+  background-color: green;
+  transition: background-color 2s;
+}
+
+.cool.red {
+  background-color: red;
+}
